force-app/main/default/objects/OpportunityLineItem/fields/ContractEnd__c.field-meta.xml
<CustomField>
    <fullName>ContractEnd__c</fullName>
    <label>Contract End</label>
    <type>Date</type>
</CustomField>