force-app/main/default/objects/OpportunityLineItem/fields/ContractEndDescription__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDescription__c</fullName>
    <label>Contract End Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>