force-app/main/default/objects/OpportunityLineItem/fields/ContractLength__c.field-meta.xml
<CustomField>
    <fullName>ContractLength__c</fullName>
    <label>Contract Length (hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>