force-app/main/default/objects/OpportunityLineItem/fields/ContractStart__c.field-meta.xml
<CustomField>
    <fullName>ContractStart__c</fullName>
    <label>Contract Start</label>
    <type>Date</type>
</CustomField>