force-app/main/default/objects/OpportunityLineItem/fields/ContractStartDescription__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDescription__c</fullName>
    <label>Contract Start Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>