force-app/main/default/objects/OpportunityLineItem/fields/CVDeliveryDeadline__c.field-meta.xml
<CustomField>
    <fullName>CVDeliveryDeadline__c</fullName>
    <label>CV Delivery Deadline</label>
    <type>Date</type>
</CustomField>