force-app/main/default/objects/OpportunityLineItem/fields/MainSkill__c.field-meta.xml
<CustomField>
    <fullName>MainSkill__c</fullName>
    <label>Main skill</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>