force-app/main/default/objects/OpportunityLineItem/fields/SecondarySkills__c.field-meta.xml
<CustomField>
    <fullName>SecondarySkills__c</fullName>
    <label>Secondary skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>